--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon --exec \"ts-node src/index\" -e ts,js,json --watch src",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:coverage": "npm test -- --coverage --collectCoverageFrom 'app/**/*.js' --collectCoverageFrom 'lib/**/*.js'"
+    "test:coverage": "npm test -- --coverage --collectCoverageFrom 'app/**/*.js' --collectCoverageFrom 'lib/**/*.js'",
     "lint": "tslint",
     "ci": "npm run lint && npm run test && npm run build"
   },
