--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
     "jest-cli": "^19.0.0",
+    "timemachine": "^0.3.0",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
     "tslint": "^5.5.0"
