--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/irc": "^0.3.32",
     "@types/jest": "^20.0.4",
     "@types/node": "^8.0.14",
+    "@types/request": "^2.0.2",
     "@types/ws": "^3.0.2",
     "cross-env": "^3.2.4",
     "exports-loader": "^0.6.3",
