prepare for initial deploy

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:coverage": "npm test -- --coverage --collectCoverageFrom 'app/**/*.js' --collectCoverageFrom 'lib/**/*.js'",
     "lint": "tslint src",
-    "ci": "npm run lint && npm run test && npm run build"
+    "ci": "npm run lint && npm run test && npm run build",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
   "author": "LayerOne <jed@layerone.io> (https://layerone.io)",
