--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitch-tmi",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -15,7 +15,8 @@
     "test:coverage": "npm test -- --coverage --collectCoverageFrom 'app/**/*.js' --collectCoverageFrom 'lib/**/*.js'",
     "lint": "tslint src",
     "ci": "npm run lint && npm run test && npm run build",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "keywords": [],
   "author": "LayerOne <jed@layerone.io> (https://layerone.io)",
@@ -41,7 +42,8 @@
     "timemachine": "^0.3.0",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
-    "tslint": "^5.5.0"
+    "tslint": "^5.5.0",
+    "semantic-release": "^7.0.2"
   },
   "jest": {
     "transform": {
@@ -54,5 +56,9 @@
       "js",
       "json"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/j3ddesign/twitch-tmi.git"
   }
 }
