--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "twitch-tmi",
+  "name": "tmi-lowdown",
   "version": "0.0.0-development",
-  "description": "",
+  "description": "tmi-lowdown provides a simple interface to interact with a Twitch chat.",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
