--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:coverage": "npm test -- --coverage --collectCoverageFrom 'app/**/*.js' --collectCoverageFrom 'lib/**/*.js'",
     "lint": "tslint src",
     "ci": "npm run lint && npm run test && npm run build",
+    "commit": "git-cz",
     "prepublishOnly": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -35,15 +36,17 @@
     "@types/node": "^8.0.14",
     "@types/request": "^2.0.2",
     "@types/ws": "^3.0.2",
+    "commitizen": "^2.9.6",
     "cross-env": "^3.2.4",
+    "cz-conventional-changelog": "^2.0.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
     "jest-cli": "^19.0.0",
+    "semantic-release": "^7.0.2",
     "timemachine": "^0.3.0",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
-    "tslint": "^5.5.0",
-    "semantic-release": "^7.0.2"
+    "tslint": "^5.5.0"
   },
   "jest": {
     "transform": {
@@ -60,5 +63,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/j3ddesign/twitch-tmi.git"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
