fix(project): fixing project structure
Aiming to remove need to add /build to all module paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_script:
 script:
   - npm run ci
 after_success:
+  - cp package.json build/
+  - cd build
   - npm run semantic-release
 branches:
   except:
