ci(ci): fix the ci process for publishin
Attempting to remove need for /build in module paths during import. ie: import { Client } from
'tmi-lowdown/client' instead of

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ci": "npm run lint && npm run test && npm run build",
     "commit": "git-cz",
     "prepublishOnly": "npm run build",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && cp package.json build/ && cd build && npm publish && cd ../ && semantic-release post"
   },
   "keywords": [
     "twitch",
