--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,21 @@ dist: trusty
 language: node_js
 git:
   depth: 3
-
 cache:
   directories:
   - node_modules
-
 node_js:
-  - '7.6.0'
-
+- 7.6.0
 before_script:
-  - npm prune
+- npm install -g npm
+- npm prune
 script:
-  - npm run ci
+- npm run ci
 after_success:
-  - npm run semantic-release
+- npm run semantic-release
 branches:
   except:
-    - /^v\d+\.\d+\.\d+$/
-
+  - "/^v\\d+\\.\\d+\\.\\d+$/"
 notifications:
   email:
     on_success: change
